samples/_failures_safe/1761444649_a06076_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fbd7e53.c: In function ‘main’:
./samples/SAFE/__tmp_0fbd7e53.c:118:16: error: missing terminating " character
  118 |         printf("Input error.\n
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0fbd7e53.c:118:9: error: expected expression at end of input
  118 |         printf("Input error.\n
      |         ^~~~~~
./samples/SAFE/__tmp_0fbd7e53.c:118:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0fbd7e53.c:118:9: error: expected declaration or statement at end of input
